--- a/app/views/peek/_bar.html.erb
+++ b/app/views/peek/_bar.html.erb
@@ -1,6 +1,15 @@
 <% if peek_enabled? %>
 <div id="peek" class="<%= Peek.env %><%= ' disabled' if cookies[:peek] == 'false' %>" data-request-id="<%= Peek.request_id %>">
   <div class="wrapper">
+    <div id="peek-nav" class="view">
+      <span id="peek-prev">&lt;</span>
+      <span id="peek-count" class="bucket"></span>
+      <span id="peek-next">&gt;</span>
+    </div>
+    <div id="peek-request" class="view">
+      <span class="route bucket"></span>
+      <span class="params"></span>
+    </div>
     <% Peek.views.each do |view| %>
       <div id="<%= view.dom_id %>" class="view">
         <%= render view.partial_path, :view => view %>
